# rucio-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
docker/: entrypoint.sh
src/rucio_mcp/: __init__.py  client.py  server.py  service.py  settings.py  write_config.py
tests/: test_service.py
